--- a/sticky-navbar/style.css
+++ b/sticky-navbar/style.css
@@ -33,7 +33,6 @@ nav {
 
 nav .container {
   transition: all 0.3s ease-in-out;
-
   padding: var(--header-padding);
   display: flex;
   justify-content: space-between;
@@ -67,9 +66,15 @@ ul {
 ul li a {
   color: var(--primary-text-color);
   font-size: 18px;
+  cursor: pointer;
 }
 ul li a.active {
   color: #c0392b;
+}
+
+ul li a:hover {
+  display: inline-block;
+  transform: scale(1.2);
 }
 
 .hero::before {
